--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="我是一個攝影師,IG:chihyen1111">
+  <meta name="description" content="我是一個人像攝影師,IG:chihyen1111,我在做一本百位女孩故事的影集，如果你是很有故事的女孩，歡迎聊聊">
   <meta name="author" content="">
 
   <title>Agency - Start Bootstrap Theme</title>
