--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 
-  <meta charset="utf-8">
+  <meta charset="utf+8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="我是一個人像攝影師,IG:chihyen1111,我在做一本百位女孩故事的影集，如果你是很有故事的女孩，歡迎聊聊">
-  <meta name="author" content="">
+  <meta name="author" content="CHIHYEN">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>CHIHYEN LIAO</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
