--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">photographer</h4>
-          <p class="text-muted">photography</p>
+          <p class="text-muted">我是一個人像攝影師，專注於蒐集各個有故事的女孩，把那些故事用影像詮釋出來</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -85,7 +85,7 @@
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">editor</h4>
-          <p class="text-muted">edit</p>
+          <p class="text-muted">我喜歡製作電腦動畫與善於PR+AE的剪輯軟體，拍片剪片對我來說是一件可快樂的事情</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -93,7 +93,7 @@
             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">music</h4>
-          <p class="text-muted">piano</p>
+          <p class="text-muted">從五歲開始學音樂的我，對於鋼琴抱有熱情，唯有黑鍵白建之間可以找到屬於自己的快樂</p>
         </div>
       </div>
     </div>
