--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
+          <h2 class="section-heading text-uppercase">PHOTO ALBUM</h2>
         </div>
       </div>
       <div class="row">
