--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4>2004-2019</h4>
+                  <h4 class="subheading">我的音樂學習歷程</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">剛開始學音樂是因為傳統式家庭都認為學音樂的孩子不會變壞，所以在小時候就被親戚教起音樂，沒想到越學越有趣，就一直學習鋼琴到現在，雖然現在偶爾有空才會去練琴，但對鋼琴熱情不減。</p>
                 </div>
               </div>
             </li>
