--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
+                  <h4>2011</h4>
+                  <h4 class="subheading">接觸攝影</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">剛接觸攝影，無謂就是覺得拿著相機很厲害(小屁孩時期)，就這樣被我一直摸索摸索，到現在的攝影理論，改變了不少的攝影觀念，也持續分享一些攝影知識給攝影新手。</p>
                 </div>
               </div>
             </li>
