--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
+                  <h4>2015</h4>
+                  <h4 class="subheading">接觸動態錄像</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">因為自己的好奇心，所以開始踏上動態攝影，所以開始接觸剪輯軟體，威力導演、繪聲繪影我都有用過，最後還是選擇高難度的PR，希望自己剪輯能力、後製想法越來越好</p>
                 </div>
               </div>
             </li>
