--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
+                  <h4>JUNE 2018</h4>
+                  <h4 class="subheading">百位女孩故事影集</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">對我來說，女孩正值青春，都會遇到很多故事，不管是愛情親情友情，這些故事青春逝去就再也抓不住了，所以在拍攝婚紗的想法之餘，我努力創作百位女孩故事影集，我希望用一百位女孩故事去詮釋青春。</p>
                 </div>
               </div>
             </li>
