--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">chihyen</h2>
+          <h2 class="section-heading text-uppercase">chihyen 志晏</h2>
         </div>
       </div>
       <div class="row text-center">
