--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
         </div>
       </div>
     </div>
-
+  </section>
+    
     <!-- About -->
   <section id="about">
     <div class="container">
