--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/zhiyan.liao">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
