--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <a class="nav-link js-scroll-trigger" href="#services">chihyen</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">about</a>
+            <a class="nav-link js-scroll-trigger" href="#about">about</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Photo album</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Photo album</a>
           </li>
         </ul>
       </div>
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">chihyen 志晏</h2>
+          <h2 class="section-heading text-uppercase">chihyen</h2>
         </div>
       </div>
       <div class="row text-center">
@@ -185,6 +185,41 @@
     </div>
   </section>
   
+    <!-- table -->
+  <html>
+
+	<title>W3.CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<body>
+
+	<div class="w3-container">
+	<h2>camera</h2>
+
+	<table class="w3-table-all">
+		<thead>
+		<tr class="w3-red">
+			<th>\</th>
+			<th>品牌</th>
+			<th>相機</th>
+		</tr>
+		</thead>
+		<tr>
+		<td>1</td>
+		<td>nikon</td>
+		<td>D7200</td>
+		</tr>
+		<tr>
+		<td>2</td>
+		<td>sony</td>
+		<td>A73</td>
+		</tr>
+	</table>
+	</div>
+
+	</body>
+	</html> 
+	
   <!-- Portfolio Grid -->
   <section class="bg-light" id="portfolio">
     <div class="container">
@@ -274,6 +309,8 @@
       </div>
     </div>
   </section>
+
+
 
   <!-- Footer -->
   <footer>
