--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
 	<body>
 	<div class="w3-container">
 
-	<h2>Progress Bar</h2>
-	<p>The w3-container class can be used for a progress bar.</p>
-	<p>The CSS width property can be used to set the height and width.</p>
+	<h2>百位女孩故事計畫</h2>
+	<p>收集故事進度</p>
+	<p>歡迎參與女孩故事計畫</p>
 
 	<div class="w3-border">
-	  <div class="w3-grey" style="height:24px;width:20%"></div>
+	  <div class="w3-grey" style="height:24px;width:6%"></div>
 	</div>
 
 	</div>
