--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 	<div class="w3-container">
 
 	<h2>百位女孩故事計畫</h2>
-	<p>收集故事進度</p>
+	<p>收集故事進度6%</p>
 	<p>歡迎參與女孩故事計畫</p>
 
 	<div class="w3-border">
