--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 	<body>
 	<div class="w3-container">
 
-	<h2>百位女孩故事計畫</h2>
-	<p>收集故事進度6%</p>
+	<h2>/h2>
+	<p>百位女孩收集故事進度6%</p>
 	<p>歡迎參與女孩故事計畫</p>
 
 	<div class="w3-border">
