--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
     </div>
   </section>
   
-    <!-- table -->
+    <!-- table -->	
   <html>
-
+ <section id="dicky noobs">
 	<title>W3.CSS</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -239,7 +239,8 @@
 	</div>
 	</body>
 	</html>
-
+ </section>
+	
   <!-- Portfolio Grid -->
   <section class="bg-light" id="portfolio">
     <div class="container">
