--- a/index.html
+++ b/index.html
@@ -185,6 +185,79 @@
     </div>
   </section>
   
+<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="reading">
+<div class="w-100">
+<h2 class="mb-5"><span class="text-primary">閱讀</span>Reading</h2>
+<div id="accordion">
+<div class="card">
+<div class="card-header">
+<a class="card-link" data-toggle="collapse" href="#collapseOne">哈利波特系列</a>
+</div>
+<div id="collapseOne" class="collapse show" data-parent="#accordion">
+<div class="card-body">
+<table class="table table-hover">
+<thead>
+<tr>
+<th>出版年</th>
+<th>作者</th>
+<th>書籍名稱</th>
+<th>出版商</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1997</td>
+<td>J. K. Rowling</td>
+<td>神秘的魔法石</td>
+<td>皇冠</td>
+</tr>
+<tr>
+<td>1998</td>
+<td>J. K. Rowling</td>
+<td>消失的密室</td>
+<td>皇冠</td>
+</tr>
+<tr>
+<td>1999</td>
+<td>J. K. Rowling</td>
+<td>阿茲卡班的逃犯</td>
+<td>皇冠</td>
+</tr>
+<tr>
+<td>2000</td>
+<td>J. K. Rowling</td>
+<td>火盃的考驗</td>
+<td>皇冠</td>
+</tr>
+<tr>
+<td>2003</td>
+<td>J. K. Rowling</td>
+<td>鳳凰會的密令</td>
+<td>皇冠</td>
+</tr>
+<tr>
+<td>2005</td>
+<td>J. K. Rowling</td>
+<td>混血王子的背叛</td>
+<td>皇冠</td>
+</tr>
+<tr>
+<td>2007</td>
+<td>J. K. Rowling</td>
+<td>死神的聖物</td>
+<td>皇冠</td>
+<tr>
+<td>2017</td>
+<td>J. K. Rowling</td>
+<td>怪獸與牠們的產地</td>
+<td>皇冠</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
+
     <!-- table -->	
   <html>
  <section id="dicky noobs">
