--- a/index.html
+++ b/index.html
@@ -187,70 +187,28 @@
   
 <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="reading">
 <div class="w-100">
-<h2 class="mb-5"><span class="text-primary">閱讀</span>Reading</h2>
+<h2 class="mb-5"><span class="text-primary">影像</span>Reading</h2>
 <div id="accordion">
 <div class="card">
 <div class="card-header">
-<a class="card-link" data-toggle="collapse" href="#collapseOne">哈利波特系列</a>
+<a class="card-link" data-toggle="collapse" href="#collapseOne">攝影系列</a>
 </div>
 <div id="collapseOne" class="collapse show" data-parent="#accordion">
 <div class="card-body">
 <table class="table table-hover">
 <thead>
 <tr>
-<th>出版年</th>
-<th>作者</th>
-<th>書籍名稱</th>
-<th>出版商</th>
+<th>類別</th>
+<th>論述</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>1997</td>
-<td>J. K. Rowling</td>
-<td>神秘的魔法石</td>
-<td>皇冠</td>
-</tr>
-<tr>
-<td>1998</td>
-<td>J. K. Rowling</td>
-<td>消失的密室</td>
-<td>皇冠</td>
-</tr>
-<tr>
-<td>1999</td>
-<td>J. K. Rowling</td>
-<td>阿茲卡班的逃犯</td>
-<td>皇冠</td>
-</tr>
-<tr>
-<td>2000</td>
-<td>J. K. Rowling</td>
-<td>火盃的考驗</td>
-<td>皇冠</td>
-</tr>
-<tr>
-<td>2003</td>
-<td>J. K. Rowling</td>
-<td>鳳凰會的密令</td>
-<td>皇冠</td>
-</tr>
-<tr>
-<td>2005</td>
-<td>J. K. Rowling</td>
-<td>混血王子的背叛</td>
-<td>皇冠</td>
-</tr>
-<tr>
-<td>2007</td>
-<td>J. K. Rowling</td>
-<td>死神的聖物</td>
-<td>皇冠</td>
-<tr>
-<td>2017</td>
-<td>J. K. Rowling</td>
-<td>怪獸與牠們的產地</td>
-<td>皇冠</td>
+<td>攝影</td>
+<td>📷「攝影是甚麼?」，不斷思考攝影在工作與藝術的平衡點之間，而想有所突破，這樣的觀點或許不夠完整，因為攝影必須仰賴科學的器材產物下，因此有一派的人認為攝影不是藝術，而我多半只是專注工作，用作品說話甚於著述。 
+    📷 攝影技術從發明到現在已發明超過一百七十年的歷史，因為科技的進步，攝影器材不斷的縮小，人手一機的時代已出現在我們周遭，「影像」成我們隨時能見的物品，「相片」已經成了有圖有真相的氾濫程度，而「相片」因為科技進步更能進行後期造假改變，從個人社群到新聞媒體，這些「影像」不管是主動接收或是被迫觀看，當代每一個人都是攝影者與觀看者，如何辨真假與解讀，成了現代人的需要學習的重要事情。
+    📷攝影作品中分「形式」與「內容」兩個概念，兩種概念分不同的指向，「形式」指作品呈現的型態，與創作使用技巧有很大關係；「內容」則指作品的意涵，想表達的故事。一方面有某些意識想表達，一方面要思考要以甚麼影像概念去詮釋。 一個攝影作品難以決定好壞美醜，美醜一直以來都是主流文化主觀意識下的龐大產物，因成長環境、接受教育不一樣，看作品的切入點與方法都不盡相同，但我覺得攝影審美學存在著一定的基礎形式，我很崇拜的一個藝術評論家羅傑‧弗萊曾經對於能提起觀看找審美感受的五種「形式」特性:1線條的韻律、2面、3空間、4光線與陰影、5色彩，弗萊提出的這五種要素是從他眼中的優秀作品歸納而來，並沒有要分項討論，而視為一個整體。 
+    📷個人美感可以因為觀看數多藝術作品來提升，可以因為觀看作品來昇華自己的思想，但永遠不會失去本質的自己。藝術的進步就不一樣，藝術不像科學一樣可以由後來理論吸納或是取代先前的理論，藝術史上沒有誰可以取代誰，藝術家想表達的意念只有觀看者將藝術品視為目的本身，才有可能公正地看待藝術品，藝術品永遠只會是意識目的本身，而不會另一樣東西的表達手段。</td>
 </tr>
 </tbody>
 </table>
