--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   
 <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="reading">
 <div class="w-100">
-<h2 class="mb-5"><span class="text-primary">影像</span>Reading</h2>
+<h2 class="mb-5"><span class="text-primary">影像</span></h2>
 <div id="accordion">
 <div class="card">
 <div class="card-header">
