--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2004-2019</h4>
-                  <h4 class="subheading">我的音樂學習歷程</h4>
+                  <h4 class="subheading"></h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">剛開始學音樂是因為傳統式家庭都認為學音樂的孩子不會變壞，所以在小時候就被親戚教起音樂，沒想到越學越有趣，就一直學習鋼琴到現在，雖然現在偶爾有空才會去練琴，但對鋼琴熱情不減。</p>
@@ -137,7 +137,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2011</h4>
-                  <h4 class="subheading">接觸攝影</h4>
+                  <h4 class="subheading"></h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">剛接觸攝影，無謂就是覺得拿著相機很厲害(小屁孩時期)，就這樣被我一直摸索摸索，到現在的攝影理論，改變了不少的攝影觀念，也持續分享一些攝影知識給攝影新手。</p>
@@ -151,7 +151,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2015</h4>
-                  <h4 class="subheading">接觸動態錄像</h4>
+                  <h4 class="subheading"></h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">因為自己的好奇心，所以開始踏上動態攝影，所以開始接觸剪輯軟體，威力導演、繪聲繪影我都有用過，最後還是選擇高難度的PR，希望自己剪輯能力、後製想法越來越好</p>
@@ -165,7 +165,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>JUNE 2018</h4>
-                  <h4 class="subheading">百位女孩故事影集</h4>
+                  <h4 class="subheading"></h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">對我來說，女孩正值青春，都會遇到很多故事，不管是愛情親情友情，這些故事青春逝去就再也抓不住了，所以在拍攝婚紗的想法之餘，我努力創作百位女孩故事影集，我希望用一百位女孩故事去詮釋青春。</p>
